@@ -325,6 +325,7 @@ Grid *gridRemoveFaceAndQueue(Grid *g, Queue *, int face );
 #define gridFaceAdj(grid) (NULL==grid?NULL:grid->faceAdj)
 int gridFindFace(Grid *g, int n0, int n1, int n2 );
 int gridFaceId(Grid *g, int n0, int n1, int n2 );
+int gridFindFaceWithNodesUnless(Grid *g, int n0, int n1, int unless_face );
 Grid *gridReconnectAllFace(Grid *g, int oldNode, int newNode );
 GridBool gridReconnectionOfAllFacesOK(Grid *g, int oldNode, int newNode );
 Grid *gridFace(Grid *g, int face, int *nodes, int *id );
